# narrativecluster

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
notebooks/: 01_tau_edge_tuning.ipynb  02_end_to_end_walkthrough.ipynb
src/narrativecluster/: __init__.py  _utils.py  cli.py  clusterer.py  config.py
tests/: test_clusterer.py
